--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@superwindcloud/maker-nsis",
+	"name": "electron-forge-make-nsis",
 	"version": "1.0.0",
 	"description": "An `electron-forge` maker for NSIS that supports `electron-forge` v6 and can be used as a replacement for `electron-builder`. Supports code-signing and basic updates with `electron-updater`.",
 	"main": "dist/cjs/makerNsis.js",
